[package]
name = "tisu-fs"
version = "0.1.0"
authors = ["1363558876@qq.com <1363558876@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tisu-memory = { path = "../tisu-memory" }
tisu-sync = { path = "../tisu-sync" }
tisu-driver = { path = "../tisu-driver" }
device-buffer = { path = "../device-buffer" }
# tisu-memory = { git = "https://github.com/TisuOS/tisu-memory" }
# tisu-sync = { git = "https://github.com/TisuOS/tisu-sync" }
# tisu-driver = { git = "https://github.com/TisuOS/tisu-driver" }
# device-buffer = { git = "https://github.com/TisuOS/device-buffer" }
