[package]
name = "tisu-fs"
version = "0.4.1"
authors = ["1363558876@qq.com <1363558876@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tisu-memory = { git = "https://gitee.com/TisuOS/tisu-memory", tag = "v3.1" }
tisu-sync = { git = "https://gitee.com/TisuOS/tisu-sync", tag = "v3.0" }
tisu-driver = { git = "https://gitee.com/TisuOS/tisu-driver", tag = "v3.1" }
device-buffer = { git = "https://gitee.com/TisuOS/device-buffer", tag = "v4.1" }
